# autonomous-lab

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  reference
.autolab/: config.yaml  event_log.jsonl  idea.md  meeting_log.md  meeting_summaries.md  state.json
.autolab/acquired_skills/bracken/: SKILL.md
.autolab/acquired_skills/bwa-mapping/: SKILL.md
.autolab/acquired_skills/bwa-mem2/: SKILL.md
.autolab/acquired_skills/comparative-genomics/: SKILL.md
.autolab/acquired_skills/differential-expression/: SKILL.md
.autolab/acquired_skills/kallisto/: SKILL.md
.autolab/acquired_skills/kraken2/: SKILL.md
.autolab/acquired_skills/metagenomics-analysis/: SKILL.md
.autolab/acquired_skills/orthofinder/: SKILL.md
.autolab/acquired_skills/phylogenetics/: SKILL.md
.autolab/acquired_skills/prodigal/: SKILL.md
.autolab/acquired_skills/salmon/: SKILL.md
.autolab/acquired_skills/samtools/: SKILL.md
.autolab/acquired_skills/scanpy/: SKILL.md
.autolab/acquired_skills/single-cell-rna-seq/: SKILL.md
.autolab/acquired_skills/snpeff/: SKILL.md
.autolab/acquired_skills/snpeff-annotation/: SKILL.md
.autolab/acquired_skills/spades-assembly/: SKILL.md
.autolab/acquired_skills/trimmomatic/: SKILL.md
.autolab/acquired_skills/variant-calling/: SKILL.md
.autolab/profiles/: pi.yaml  trainee.yaml
data/: data
demo/: advance_state.py  mock_project.py  run_server.py  serve_demo.py  setup_mock.py
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/characters/: alex-kumar.yaml  cleon-garzol.yaml  index.json  lina-vasquez.yaml  maria-chen.yaml  michael-florea.yaml  winnie-qiu.yaml
docs/css/: style.css
docs/js/: main.js  sprites.js
paper/: main.tex  references.bib
paper/sections/: abstract.tex  discussion.tex  introduction.tex  methods.tex  results.tex
src/autonomous_lab/: __init__.py  __main__.py  editorial_server.py  server.py
src/autonomous_lab/integrations/: __init__.py  biomni.py  github.py  tooluniverse.py
src/autonomous_lab/lab/: __init__.py  agent_tools.py  citations.py  event_log.py  latex_template.py  orchestrator.py  prompts.py  recruitment.py  skills.py  state.py  team_builder.py
src/autonomous_lab/lab/providers/: __init__.py  anthropic_provider.py  base.py  cli_provider.py  factory.py  openai_provider.py
src/autonomous_lab/skills/scientific-analysis-review/: SKILL.md
src/autonomous_lab/tests/: test_github.py  test_integration.py  test_prompts.py  test_recruitment.py  test_skills.py  test_state.py  test_task_mode.py  test_team_builder.py  test_tooluniverse.py
src/autonomous_lab/web/: main.py
src/autonomous_lab/web/routes/: main_routes.py
src/autonomous_lab/web/static/css/: lab-dashboard.css  lab.css
src/autonomous_lab/web/static/js/: lab.js
src/autonomous_lab/web/templates/: character_builder.html  editorial_center.html  feedback.html  lab.html  skill_learner.html
src/autonomous_lab/web/utils/: port_manager.py  project_registry.py
(+1 files in other folders)
